<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lemon News</string>
    <string name="app_update_new_version">There is a new version (%1$s) of %2$s available!</string>
    <string name="upgrade">Upgrade</string>
    <string name="pref_check_updates_title">Check for updates</string>
    <string name="pref_min_interval_title">Minimum update frequency</string>
    <string name="pref_min_interval_summary">Checks for updates at most this many minutes</string>
    <string name="cover_tip_text">sliding for continue reading</string>
    <string name="subs_retry">Retry</string>
    <string name="subs_not_link">There is no Internet connection!</string>
    <string name="article_downloading">loading more</string>
    <string name="press_again_to_exit">press again to exit</string>
    <string name="content_center">Content Center</string>
    <string name="setting">Setting</string>
    <string name="exit">Exit</string>
    <string name="exit_dialog_title">Exit Confirm</string>
    <string name="exit_dialog_message">Are you sure to exit Lemon News?</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="about">About</string>
    <string name="article_list">Article list</string>
    <string name="refresh">Refresh</string>
    <string name="open">Open</string>
    <string name="markasread">Mark all as read</string>
    <string name="add_subscribe">Add Subscribe</string>
    <string name="cancel_subscribe">Cancel Subscribe</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="empty">Empty</string>
    <string name="app_version">Version:</string>
    <string name="search_tip">Enter subscribe source</string>
    <string name="my_subscribe">My Subscriptions</string>
    <string name="no_seach_content">no search content</string>
    <string name="refresh_consume_seconds">last Refresh %1$d seconds ago</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
    <string name="load_more">Loading more</string>
    <string name="yy_mm_dd_hh_mm_refresh_text">\'Last refresh: \'yyyy-MM-dd HH:mm</string>
    <string name="author">Author:</string>
    <string name="push_msg_time">yyyy-MM-dd HH:mm</string>
    <string name="same_minute_same_second_format_text">Just a moment ago</string>
    <string name="same_minute_but_not_the_same_second_format_text">%1$s seconds ago</string>
    <string name="during_one_hour_format_text">%1$s minutes ago</string>
    <string name="one_hour_before_to_time_zero_format_text">\'Today \'HH:mm</string>
    <string name="yesterday_time_format_text">\'Yesterday \'HH:mm</string>
    <string name="yy_mm_dd_hh_mm_format_text">yyyy-MM-dd HH:mm</string>
    <string name="mm_dd_hh_mm_format_text">MM-dd HH:mm</string>
    <string name="hour_mimute_zero_today_format_text">Today</string>
    <string name="hour_mimute_zero_yesterday_format_text">Yesterday</string>
    <string name="hour_mimute_zero_this_year_days_before_yesterday_format_text">MM-dd</string>
    <string name="hour_mimute_zero_years_before_this_year_format_text">yyyy-MM-dd</string>
    <string name="cover_author_from">FROM:</string>
    <string name="view_original">Original Page</string>
    <string name="search_noresult">Sorry, we did not find the content of the following keywords</string>
    <string name="search_noresult_black">Sorry, we did not find the content of the following keywords</string>
    <string name="search_result">%1$dItems found</string>
    <string name="search_result_black">%1$dItems found</string>
    <string name="tips">Tips</string>
    <string name="version_new">A new version(%s) of the application is available. Do you wish to update now ?</string>
    <string name="version_info">Upgrade changes:</string>
    <string name="version_update">Update</string>
    <string name="version_cancel">Cancel</string>
    <string name="application_check_updata">check update</string>
    <string name="request_software_update">Requesting new version.</string>
    <string name="last_version">Current software is the last version!</string>
    <string name="setting_activity_title_text">Read Setup</string>
    <string name="pref_volumn_guide_setting_title">Volume keys to navigate</string>
    <string name="pref_text_size_setting_title">Text font size</string>
    <string name="pref_volumn_guide_summary_text">Use the volume button to switch on article</string>
    <string name="setting_text_size_entryvalue_1">huge large</string>
    <string name="setting_text_size_entryvalue_2">medium large</string>
    <string name="setting_text_size_entryvalue_3">normal</string>
    <string name="setting_text_size_entryvalue_4">small</string>
    <string name="pref_category_view_title">Navigation controls</string>
    <string name="pref_category_other_title">Other</string>
    <string name="pref_clear_cache_title">Clear cache</string>
    <string name="pref_check_update_title">Check for Updates</string>
    <string name="about_pref_key_title_text">About</string>
    <string name="about_pref_summary_text">Understand the Lemon News</string>
    <string name="pref_text_size_format_text">Current Font Size: %1$s</string>
    <string name="pref_version_value_format_text">Current version: %1$s</string>
    <string name="clear_cache_tip_text">Cleaning up the cache</string>
    <string name="subsource_unsubscribed_widget_tip_text">Add a subscription for Preview</string>
    <string name="subscribed_source_updating">Subscribe source information being updated</string>
    <string name="pref_auto_refresh_setting_title">Automatically refresh the contents of the subscribed source</string>
    <string name="pref_auto_refresh_summary_text">Open to ensure that your subscribed content source is always up-to-date</string>
    <string name="msg_nonetwork">The network connection is not available, go to System Settings to open the network connection!</string>
</resources>